Updated existing tests according to revised expected behavior that mapping syntax containing multiple fields or default values (e.g. `"test" " " "value"`) should be resulted into one element of ListValue for the entity's string-array-based field